cmake_minimum_required(VERSION 2.6)
project("opencx")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
find_package(OpenCV REQUIRED)

add_executable("example_cx"  "example_cx.cpp")
add_executable("example_sx"  "example_sx.cpp")
add_executable("example_ekf" "example_ekf.cpp")
target_link_libraries("example_cx"  ${OpenCV_LIBS})
target_link_libraries("example_sx"  ${OpenCV_LIBS})
target_link_libraries("example_ekf" ${OpenCV_LIBS})
